src/parser.output
Terminals unused in grammar

    CONSTRUCTOR_T
    SQUIGGLE_T


State 0 conflicts: 11 shift/reduce
State 3 conflicts: 11 shift/reduce
State 7 conflicts: 11 shift/reduce
State 8 conflicts: 2 shift/reduce
State 15 conflicts: 1 reduce/reduce
State 23 conflicts: 1 shift/reduce, 1 reduce/reduce
State 38 conflicts: 1 shift/reduce
State 43 conflicts: 36 reduce/reduce
State 48 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 87 conflicts: 15 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 15 shift/reduce
State 95 conflicts: 1 reduce/reduce
State 96 conflicts: 1 reduce/reduce
State 101 conflicts: 11 shift/reduce
State 119 conflicts: 11 shift/reduce
State 150 conflicts: 11 shift/reduce
State 158 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 15 shift/reduce
State 189 conflicts: 1 shift/reduce
State 190 conflicts: 11 shift/reduce
State 191 conflicts: 11 shift/reduce
State 195 conflicts: 11 shift/reduce
State 199 conflicts: 11 shift/reduce
State 213 conflicts: 11 shift/reduce
State 228 conflicts: 11 shift/reduce
State 230 conflicts: 11 shift/reduce
State 234 conflicts: 11 shift/reduce


Grammar

    0 $accept: program $end

    1 binary_operation: expression LESS_THAN_T expression
    2                 | expression GREATER_THAN_T expression
    3                 | expression GREATER_EQUAL_T expression
    4                 | expression LESS_EQUAL_T expression
    5                 | expression NOT_EQUAL_T expression
    6                 | expression DOUBLE_EQUAL_T expression
    7                 | expression AND_T expression
    8                 | expression OR_T expression
    9                 | expression PLUS_T expression
   10                 | expression MINUS_T expression
   11                 | expression ASTERISK_T expression
   12                 | expression SLASH_T expression
   13                 | expression CARROT_T expression
   14                 | expression PERCENT_T expression
   15                 | expression CONCAT_T expression

   16 variable_name_reference: variable

   17 unary_operation: MINUS_T expression
   18                | NOT_T expression
   19                | POUND_T expression
   20                | INCREMENT_T variable_name_reference
   21                | DECREMENT_T variable_name_reference
   22                | variable_name_reference INCREMENT_T
   23                | variable_name_reference DECREMENT_T
   24                | variable_name_reference

   25 expression_list: expression
   26                | expression COMMA_T expression_list

   27 parameter_list: name_list
   28               | name_list COMMA_T VARARG_T
   29               | VARARG_T

   30 name_list: name_type
   31          | name_type COMMA_T name_list

   32 type_list: type
   33          | type COMMA_T type_list

   34 type: TNUMBER_T
   35     | TSTRING_T
   36     | TBOOLEAN_T
   37     | TANY_T
   38     | VARARG_T
   39     | TARRAY_T LESS_THAN_T type GREATER_THAN_T
   40     | TTABLE_T LESS_THAN_T type COMMA_T type GREATER_THAN_T
   41     | LEFT_PARAN_T type_list RIGHT_PARAN_T COLON_T type_list

   42 name_type: IDENTIFIER_T COLON_T type
   43          | IDENTIFIER_T

   44 array_constructor: LEFT_BRACKET_T expression_list RIGHT_BRACKET_T
   45                  | LEFT_BRACKET_T RIGHT_BRACKET_T

   46 pair: LEFT_SQUARE_T expression RIGHT_SQUARE_T EQUAL_T expression

   47 pair_list: ε
   48          | pair
   49          | pair COMMA_T pair_list

   50 table_constructor: LEFT_BRACKET_T pair_list RIGHT_BRACKET_T

   51 variable: IDENTIFIER_T
   52         | prefix_expression LEFT_SQUARE_T expression RIGHT_SQUARE_T
   53         | prefix_expression DOT_T IDENTIFIER_T

   54 prefix_expression: call
   55                  | LEFT_PARAN_T expression RIGHT_PARAN_T
   56                  | variable_name_reference

   57 arguments: LEFT_PARAN_T RIGHT_PARAN_T
   58          | LEFT_PARAN_T expression_list RIGHT_PARAN_T
   59          | STRING_T

   60 call: prefix_expression arguments
   61     | prefix_expression COLON_T IDENTIFIER_T arguments

   62 expression: NIL_T
   63           | FALSE_T
   64           | TRUE_T
   65           | NUMBER_T
   66           | STRING_T
   67           | VARARG_T
   68           | binary_operation
   69           | prefix_expression
   70           | unary_operation
   71           | array_constructor
   72           | table_constructor
   73           | FUNCTION_T function_body

   74 program: block

   75 variable_list: variable
   76              | variable COMMA_T variable_list

   77 else_body: ELSEIF_T expression THEN_T block else_body
   78          | ELSEIF_T expression THEN_T block END_T
   79          | ELSE_T block END_T

   80 function_body: LEFT_PARAN_T parameter_list RIGHT_PARAN_T COLON_T type_list block END_T
   81              | LEFT_PARAN_T parameter_list RIGHT_PARAN_T block END_T
   82              | LEFT_PARAN_T RIGHT_PARAN_T COLON_T type_list block END_T
   83              | LEFT_PARAN_T RIGHT_PARAN_T block END_T

   84 function_definition: FUNCTION_T IDENTIFIER_T function_body

   85 single_assignment: variable EQUAL_T expression
   86                  | name_type EQUAL_T expression

   87 assignment: variable_list EQUAL_T expression_list
   88           | variable_list PLUS_EQUAL_T expression_list
   89           | variable_list MINUS_EQUAL_T expression_list
   90           | variable_list ASTERISK_EQUAL_T expression_list
   91           | variable_list SLASH_EQUAL_T expression_list
   92           | variable_list MOD_EQUAL_T expression_list
   93           | variable_list CARROT_EQUAL_T expression_list
   94           | variable_list CONCAT_EQUAL_T expression_list

   95 class_member: name_type
   96             | function_definition

   97 class_member_list: class_member
   98                  | class_member COMMA_T class_member_list

   99 statement: assignment
  100          | call
  101          | DO_T block END_T
  102          | WHILE_T expression DO_T block END_T
  103          | REPEAT_T block UNTIL_T expression
  104          | IF_T expression THEN_T block END_T
  105          | IF_T expression THEN_T block else_body
  106          | FOR_T single_assignment COMMA_T expression DO_T block END_T
  107          | FOR_T single_assignment COMMA_T expression COMMA_T expression DO_T block END_T
  108          | FOR_T name_list IN_T expression_list DO_T block END_T
  109          | LOCAL_T name_list
  110          | LOCAL_T name_list EQUAL_T expression_list
  111          | LOCAL_T function_definition
  112          | CLASS_T IDENTIFIER_T LEFT_BRACKET_T class_member_list RIGHT_BRACKET_T
  113          | last_statement

  114 block: ε
  115      | statement
  116      | block statement

  117 last_statement: RETURN_T expression_list
  118               | RETURN_T
  119               | BREAK_T


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER_T (258) 42 43 51 53 61 84 112
    NUMBER_T (259) 65
    STRING_T (260) 59 66
    AND_T (261) 7
    BREAK_T (262) 119
    DO_T (263) 101 102 106 107 108
    ELSE_T (264) 79
    ELSEIF_T (265) 77 78
    END_T (266) 78 79 80 81 82 83 101 102 104 106 107 108
    FALSE_T (267) 63
    TRUE_T (268) 64
    FOR_T (269) 106 107 108
    FUNCTION_T (270) 73 84
    IF_T (271) 104 105
    IN_T (272) 108
    LOCAL_T (273) 109 110 111
    NIL_T (274) 62
    NOT_T (275) 18
    OR_T (276) 8
    REPEAT_T (277) 103
    RETURN_T (278) 117 118
    THEN_T (279) 77 78 104 105
    UNTIL_T (280) 103
    WHILE_T (281) 102
    CLASS_T (282) 112
    CONSTRUCTOR_T (283)
    TNUMBER_T (284) 34
    TSTRING_T (285) 35
    TBOOLEAN_T (286) 36
    TANY_T (287) 37
    TARRAY_T (288) 39
    TTABLE_T (289) 40
    PLUS_T (290) 9
    MINUS_T (291) 10 17
    ASTERISK_T (292) 11
    SLASH_T (293) 12
    PERCENT_T (294) 14
    EQUAL_T (295) 46 85 86 87 110
    LEFT_PARAN_T (296) 41 55 57 58 80 81 82 83
    RIGHT_PARAN_T (297) 41 55 57 58 80 81 82 83
    RIGHT_SQUARE_T (298) 46 52
    LEFT_SQUARE_T (299) 46 52
    CARROT_T (300) 13
    GREATER_THAN_T (301) 2 39 40
    LESS_THAN_T (302) 1 39 40
    SQUIGGLE_T (303)
    COLON_T (304) 41 42 61 80 82
    POUND_T (305) 19
    DOT_T (306) 53
    COMMA_T (307) 26 28 31 33 40 49 76 98 106 107
    LEFT_BRACKET_T (308) 44 45 50 112
    RIGHT_BRACKET_T (309) 44 45 50 112
    DOUBLE_EQUAL_T (310) 6
    NOT_EQUAL_T (311) 5
    GREATER_EQUAL_T (312) 3
    LESS_EQUAL_T (313) 4
    CONCAT_T (314) 15
    VARARG_T (315) 28 29 38 67
    PLUS_EQUAL_T (316) 88
    MINUS_EQUAL_T (317) 89
    ASTERISK_EQUAL_T (318) 90
    SLASH_EQUAL_T (319) 91
    MOD_EQUAL_T (320) 92
    CARROT_EQUAL_T (321) 93
    CONCAT_EQUAL_T (322) 94
    DECREMENT_T (323) 21 23
    INCREMENT_T (324) 20 22


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    binary_operation (71)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 68
    variable_name_reference (72)
        on left: 16
        on right: 20 21 22 23 24 56
    unary_operation (73)
        on left: 17 18 19 20 21 22 23 24
        on right: 70
    expression_list (74)
        on left: 25 26
        on right: 26 44 58 87 88 89 90 91 92 93 94 108 110 117
    parameter_list (75)
        on left: 27 28 29
        on right: 80 81
    name_list (76)
        on left: 30 31
        on right: 27 28 31 108 109 110
    type_list (77)
        on left: 32 33
        on right: 33 41 80 82
    type (78)
        on left: 34 35 36 37 38 39 40 41
        on right: 32 33 39 40 42
    name_type (79)
        on left: 42 43
        on right: 30 31 86 95
    array_constructor (80)
        on left: 44 45
        on right: 71
    pair (81)
        on left: 46
        on right: 48 49
    pair_list (82)
        on left: 47 48 49
        on right: 49 50
    table_constructor (83)
        on left: 50
        on right: 72
    variable (84)
        on left: 51 52 53
        on right: 16 75 76 85
    prefix_expression (85)
        on left: 54 55 56
        on right: 52 53 60 61 69
    arguments (86)
        on left: 57 58 59
        on right: 60 61
    call (87)
        on left: 60 61
        on right: 54 100
    expression (88)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 17 18 19 25 26 46 52 55 77 78 85 86 102 103 104 105 106 107
    program (89)
        on left: 74
        on right: 0
    variable_list (90)
        on left: 75 76
        on right: 76 87 88 89 90 91 92 93 94
    else_body (91)
        on left: 77 78 79
        on right: 77 105
    function_body (92)
        on left: 80 81 82 83
        on right: 73 84
    function_definition (93)
        on left: 84
        on right: 96 111
    single_assignment (94)
        on left: 85 86
        on right: 106 107
    assignment (95)
        on left: 87 88 89 90 91 92 93 94
        on right: 99
    class_member (96)
        on left: 95 96
        on right: 97 98
    class_member_list (97)
        on left: 97 98
        on right: 98 112
    statement (98)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 115 116
    block (99)
        on left: 114 115 116
        on right: 74 77 78 79 80 81 82 83 101 102 103 104 105 106 107 108 116
    last_statement (100)
        on left: 117 118 119
        on right: 113


State 0

    0 $accept: • program $end

    IDENTIFIER_T  shift, and go to state 1
    BREAK_T       shift, and go to state 2
    DO_T          shift, and go to state 3
    FOR_T         shift, and go to state 4
    IF_T          shift, and go to state 5
    LOCAL_T       shift, and go to state 6
    REPEAT_T      shift, and go to state 7
    RETURN_T      shift, and go to state 8
    WHILE_T       shift, and go to state 9
    CLASS_T       shift, and go to state 10
    LEFT_PARAN_T  shift, and go to state 11

    IDENTIFIER_T  [reduce using rule 114 (block)]
    BREAK_T       [reduce using rule 114 (block)]
    DO_T          [reduce using rule 114 (block)]
    FOR_T         [reduce using rule 114 (block)]
    IF_T          [reduce using rule 114 (block)]
    LOCAL_T       [reduce using rule 114 (block)]
    REPEAT_T      [reduce using rule 114 (block)]
    RETURN_T      [reduce using rule 114 (block)]
    WHILE_T       [reduce using rule 114 (block)]
    CLASS_T       [reduce using rule 114 (block)]
    LEFT_PARAN_T  [reduce using rule 114 (block)]
    $default      reduce using rule 114 (block)

    variable_name_reference  go to state 12
    variable                 go to state 13
    prefix_expression        go to state 14
    call                     go to state 15
    program                  go to state 16
    variable_list            go to state 17
    assignment               go to state 18
    statement                go to state 19
    block                    go to state 20
    last_statement           go to state 21


State 1

   51 variable: IDENTIFIER_T •

    $default  reduce using rule 51 (variable)


State 2

  119 last_statement: BREAK_T •

    $default  reduce using rule 119 (last_statement)


State 3

  101 statement: DO_T • block END_T

    IDENTIFIER_T  shift, and go to state 1
    BREAK_T       shift, and go to state 2
    DO_T          shift, and go to state 3
    FOR_T         shift, and go to state 4
    IF_T          shift, and go to state 5
    LOCAL_T       shift, and go to state 6
    REPEAT_T      shift, and go to state 7
    RETURN_T      shift, and go to state 8
    WHILE_T       shift, and go to state 9
    CLASS_T       shift, and go to state 10
    LEFT_PARAN_T  shift, and go to state 11

    IDENTIFIER_T  [reduce using rule 114 (block)]
    BREAK_T       [reduce using rule 114 (block)]
    DO_T          [reduce using rule 114 (block)]
    FOR_T         [reduce using rule 114 (block)]
    IF_T          [reduce using rule 114 (block)]
    LOCAL_T       [reduce using rule 114 (block)]
    REPEAT_T      [reduce using rule 114 (block)]
    RETURN_T      [reduce using rule 114 (block)]
    WHILE_T       [reduce using rule 114 (block)]
    CLASS_T       [reduce using rule 114 (block)]
    LEFT_PARAN_T  [reduce using rule 114 (block)]
    $default      reduce using rule 114 (block)

    variable_name_reference  go to state 12
    variable                 go to state 13
    prefix_expression        go to state 14
    call                     go to state 15
    variable_list            go to state 17
    assignment               go to state 18
    statement                go to state 19
    block                    go to state 22
    last_statement           go to state 21


State 4

  106 statement: FOR_T • single_assignment COMMA_T expression DO_T block END_T
  107          | FOR_T • single_assignment COMMA_T expression COMMA_T expression DO_T block END_T
  108          | FOR_T • name_list IN_T expression_list DO_T block END_T

    IDENTIFIER_T  shift, and go to state 23
    LEFT_PARAN_T  shift, and go to state 11

    variable_name_reference  go to state 12
    name_list                go to state 24
    name_type                go to state 25
    variable                 go to state 26
    prefix_expression        go to state 14
    call                     go to state 27
    single_assignment        go to state 28


State 5

  104 statement: IF_T • expression THEN_T block END_T
  105          | IF_T • expression THEN_T block else_body

    IDENTIFIER_T    shift, and go to state 1
    NUMBER_T        shift, and go to state 29
    STRING_T        shift, and go to state 30
    FALSE_T         shift, and go to state 31
    TRUE_T          shift, and go to state 32
    FUNCTION_T      shift, and go to state 33
    NIL_T           shift, and go to state 34
    NOT_T           shift, and go to state 35
    MINUS_T         shift, and go to state 36
    LEFT_PARAN_T    shift, and go to state 11
    POUND_T         shift, and go to state 37
    LEFT_BRACKET_T  shift, and go to state 38
    VARARG_T        shift, and go to state 39
    DECREMENT_T     shift, and go to state 40
    INCREMENT_T     shift, and go to state 41

    binary_operation         go to state 42
    variable_name_reference  go to state 43
    unary_operation          go to state 44
    array_constructor        go to state 45
    table_constructor        go to state 46
    variable                 go to state 47
    prefix_expression        go to state 48
    call                     go to state 27
    expression               go to state 49


State 6
